--- a/form.html
+++ b/form.html
@@ -16,14 +16,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <!--Form-->
-                <form action="">
+                <form>
                     <div class="card">
                         <div class="card-header">
                             Payment Form Example
                         </div>
                         <div class="card-body">
-
                             <div class="container">
                                 <div class="row">
                                     <div id="col-md-12">
@@ -35,55 +33,53 @@
                                 <div class="row">
                                     <div class="col-md-5">
                                         <div class="form-g roup">
-                                            <label for="" class="form-label">Card Number</label>
-                                            <input type="text" id="no_card" class="form-control" placeholder="xxxx-xxxx-xxxx">
+                                            <label class="form-label">Card Number</label>
+                                            <input type="text" id="no_card" class="form-control"
+                                                placeholder="xxxx-xxxx-xxxx">
                                         </div>
                                     </div>
-
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="" class="form-label">CVV</label>
-                                            <input type="text" id ="key" class="form-control" placeholder="0000">
+                                            <label class="form-label">CVV</label>
+                                            <input type="text" id="key" class="form-control" placeholder="000">
                                         </div>
-
-
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label for="" class="form-label">Amount</label>
-                                            <input type="text" id = "total" class="form-control" placeholder="Insert Amount">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="" class="form-label">Name</label>
-                                            <input type="text" id = "nombre" class="form-control" placeholder="Insert your name">
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="" class="form-label">LastName</label>
-                                            <input type="text" id = "apellidos" class="form-control" placeholder="Insert your Lastname">
+                                            <label class="form-label">Amount</label>
+                                            <input type="text" id="total" class="form-control"
+                                                placeholder="Insert Amount">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="" class="form-label">City</label>
-                                            <input type="text" id = "ciudad" class="form-control" placeholder="xxxx-xxxx-xxxx">
+                                            <label class="form-label">Name</label>
+                                            <input type="text" id="nombre" class="form-control"
+                                                placeholder="Insert your name">
                                         </div>
                                     </div>
-
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="form-label">LastName</label>
+                                            <input type="text" id="apellidos" class="form-control"
+                                                placeholder="Insert your Lastname">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="form-label">City</label>
+                                            <input type="text" id="ciudad" class="form-control"
+                                                placeholder="xxxx-xxxx-xxxx">
+                                        </div>
+                                    </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="" class="form-label">State</label>
-                                            <select id = "estado" class="form-control">
+                                            <label class="form-label">State</label>
+                                            <select id="estado" class="form-control">
                                                 <option value="">select</option>
                                                 <option value="1"> option 1</option>
                                                 <option value="1"> option 2</option>
@@ -94,52 +90,48 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="" class="form-label">Postal Code</label>
-                                            <input type="text" id = "postal" class="form-control" placeholder="Insert Amount">
+                                            <label class="form-label">Postal Code</label>
+                                            <input type="text" id="postal" class="form-control"
+                                                placeholder="Insert Amount">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="" class="form-label">we accept</label>
+                                            <label class="form-label">we accept</label>
                                             <br>
-                                            <div style="background: beige; width: 40%; padding: 5px; text-align: center;">
-                                                <input type="radio" name="med_pago" value="visa" checked> <i class="fa fa-cc-visa"></i>
-                                                <input type="radio" name="med_pago" value="mastercard"> <i class="fa fa-cc-mastercard"></i>
-                                                <input type="radio" name="med_pago" value="paypal"> <i class="fa fa-cc-paypal"></i>
-                                                <input type="radio" name="med_pago" value="amex"> <i class="fa fa-cc-amex"></i>
+                                            <div
+                                                style="background: beige; width: 40%; padding: 5px; text-align: center;">
+                                                <input type="radio" name="med_pago" value="visa">
+                                                <i class="fa fa-cc-visa"></i>
+                                                <input type="radio" name="med_pago" value="mastercard">
+                                                <i class="fa fa-cc-mastercard"></i>
+                                                <input type="radio" name="med_pago" value="paypal">
+                                                <i class="fa fa-cc-paypal"></i>
+                                                <input type="radio" name="med_pago" value="amex">
+                                                <i class="fa fa-cc-amex"></i>
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="" class="form-label">comment</label>
-                                            <br><textarea name="insert some comment" id="" cols="67"
-                                                rows="6"></textarea>
+                                            <label class="form-label">comment</label>
+                                            <br><textarea name="insert some comment" id="" cols="67" rows="6"></textarea>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                         <div class="card-footer text-right">
-                            <button class="btn btn-seconday" >cancel</button>
+                            <button class="btn btn-secondary">cancel</button>
                             <button class="btn btn-primary">send</button>
-
-
-                            <!-- <li onclick="myFunction(1)">Producto1</li> -->
                         </div>
                     </div>
+                </form>
             </div>
-            </form>
         </div>
     </div>
-    </div>
-
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -151,7 +143,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
     <script src="./js/validating.js"></script>
 </body>
 
